# boruna

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  SECURITY.md  docker-compose.blob-tests.yml  llms-full.txt  llms.txt  repomix.config.json
benches/: Cargo.toml
benches/benches/: compile.rs  evidence.rs  vm_throughput.rs
benches/src/: lib.rs
benches/tests/: smoke.rs
claudedocs/: research_agentlanguages_competitive_2026-07-15.md  research_quint_borrowable_ideas_2026-05-20.md  research_zerolang_vs_boruna_2026-05-17.md
crates/boruna-lsp/: Cargo.toml
crates/boruna-lsp/src/: main.rs
crates/boruna-mcp/: Cargo.toml
crates/boruna-mcp/src/: main.rs  server.rs
crates/boruna-mcp/src/tools/: capability.rs  check.rs  compile.rs  framework.rs  mod.rs  policy.rs  run.rs  sealed.rs  symbols.rs  template.rs  workflow.rs
crates/llm-effect/: Cargo.toml
crates/llm-effect/src/: cache.rs  context.rs  gateway.rs  lib.rs  normalize.rs  policy.rs  prompt.rs  tests.rs
crates/llmc/: Cargo.toml
crates/llmc/src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  parser.rs  suggest.rs  tests.rs  typeck.rs
crates/llmc/tests/: debug_builtins.rs  parser_suggestions.rs
crates/llmc/tests/snapshots/: parser_suggestions__ident_no_suggestion_when_distant.snap  parser_suggestions__ident_typo_function.snap  parser_suggestions__ident_typo_local.snap  parser_suggestions__keyword_fnn_for_fn.snap  parser_suggestions__keyword_lett_for_let.snap  parser_suggestions__keyword_matc_for_match.snap
crates/llmfw/: Cargo.toml
crates/llmfw/src/: effect.rs  error.rs  executor.rs  lib.rs  policy.rs  runtime.rs  state.rs  testing.rs  tests.rs  ui.rs  validate.rs
crates/llmvm/: Cargo.toml
crates/llmvm-cli/: Cargo.toml
crates/llmvm-cli/src/: coordinator.rs  dashboard.rs  doctor.rs  evidence_diff.rs  evidence_serve.rs  format.rs  main.rs  provider_registry.rs  repl.rs  scaffold.rs  serve.rs  size.rs  skills.rs  worker.rs  workflow_eval.rs
crates/llmvm-cli/src/skills/: ax-language.md  cli.md  diagnostics.md  workflows.md
crates/llmvm-cli/tests/: cli_agent_native.rs  cli_coordinator_mtls.rs  cli_coordinator_worker.rs  cli_dashboard.rs  cli_evidence_gc.rs  cli_evidence_inspect_decrypt.rs  cli_evidence_inspect_outputs.rs  cli_format.rs  cli_policy.rs  cli_watch.rs  release_notes_extraction.rs  workflow_find.rs
crates/llmvm-cli/tests/fixtures/policies/: invalid_capability_alias.json  invalid_schema_version.json  invalid_unknown_field.json  valid_full.json
crates/llmvm/src/: actor.rs  capability_gateway.rs  error.rs  http_handler.rs  lib.rs  net_record_replay.rs  policy_validate.rs  replay.rs  telemetry.rs  tests.rs  vm.rs
crates/llmvm/tests/: http_integration.rs
docs/: ACTORS_GUIDE.md  AGENT-PROMPT-TEMPLATE.md  APP_TEMPLATE.md  BRANDING.md  CHANGELOG_DOGFIX.md  COMPLIANCE_EVIDENCE.md  DETERMINISM_CONTRACT.md  DIAGNOSTICS_AND_REPAIR.md  DOGFOOD_FINDINGS.md  EFFECTS_GUIDE.md  ENTERPRISE_GAPS.md  ENTERPRISE_PLATFORM_OVERVIEW.md  FRAMEWORK_API.md  FRAMEWORK_SPEC.md  IDE_GAPS.md  INTEGRATION_GUIDE.md  LLM_EFFECT_SPEC.md  MILESTONE_DOGFIX_PLAN.md  OPERATIONS.md  ORCHESTRATOR_SPEC.md  PACKAGE_SPEC.md  PERFORMANCE.md  PLATFORM_GOVERNANCE.md  QUICKSTART.md  README.md  SECURITY_MODEL.md  STD_LIBRARIES_SPEC.md  TESTING_GUIDE.md  TRACE_TO_TESTS.md  architecture-0.3-s2b-persistence-wiring.md  architecture-0.3-s2c-approval-gate-completion.md  architecture-agent-native-cli.md  architecture-boruna-repl.md  architecture-boruna-simulate.md  architecture-boruna-witnesses.md  architecture-capability-hash.md  architecture-claim-lease-persistence.md  architecture-coord-bg-sweep.md  architecture-coord-wait.md  architecture-coordinator-worker-http.md  (+80 more)
examples/: capabilities.ax  counter.ax  fibonacci.ax  hello.ax  pattern_matching.ax  todo.ax  while_loop.ax
orchestrator/: Cargo.toml
orchestrator/docs/: keyless-signing.md  verifiable-redaction.md
orchestrator/spec/examples/: conflict_plan.json  parallel_modules_plan.json  single_module_plan.json
orchestrator/src/: lib.rs  main.rs  metrics.rs
orchestrator/src/adapters/: mod.rs
orchestrator/src/audit/: anchor.rs  attestation.rs  encryption.rs  evidence.rs  fingerprint.rs  log.rs  mod.rs  otel.rs  report.rs  rotate.rs  storage.rs  storage_azure.rs  storage_gcs.rs  storage_s3.rs  verify.rs
orchestrator/src/cli/: mod.rs
orchestrator/src/conflict/: mod.rs
orchestrator/src/engine/: graph.rs  mod.rs
orchestrator/src/patch/: mod.rs
orchestrator/src/persistence/: blob_store.rs  mod.rs  schema_v1.sql  schema_v1_to_v2.sql  schema_v2_to_v3.sql  schema_v3_to_v4.sql
orchestrator/src/simulate/: invariant.rs  mod.rs  witness.rs
orchestrator/src/storage/: mod.rs
orchestrator/src/workflow/: data_flow.rs  definition.rs  mod.rs  runner.rs  validator.rs
orchestrator/storage/: .gitkeep
orchestrator/tests/: blob_integration_tests.rs  bundle_encryption.rs  gcs_integration.rs  integration.rs  retry_timing.rs  s3_integration.rs  workflow_integration.rs
plans/: actor-system-wiring.md  boruna-mcp-server.md  enterprise-execution-platform-migration.md  feat-boruna-product-readiness-transformation.md  fleetq-feedback-issues.md  framework-effect-execution-replay-stability-invariants.md  sprints-to-v1.md
scripts/: ci.sh  (+1 more)
tooling/: Cargo.toml
tooling/docs/: node-addressed-patches.md
tooling/src/: import_resolver.rs  lib.rs  tests.rs
tooling/src/diagnostics/: analyzer.rs  collector.rs  mod.rs  registry.rs  suggest.rs
tooling/src/format/: mod.rs
tooling/src/literate/: mod.rs
tooling/src/migrations/: evidence_bundle.rs  mod.rs  workflow_json.rs
tooling/src/repair/: mod.rs
tooling/src/stdlib/: mod.rs
tooling/src/templates/: mod.rs
tooling/src/trace/: audit_to_itf.rs  itf.rs  mod.rs
tooling/src/trace2tests/: mod.rs
tooling/tests/: format_test.rs  quickfix_coverage.rs
tooling/tests/format_fixtures/: capabilities.expected.ax  capabilities.input.ax  hello.expected.ax  hello.input.ax  record_and_match.expected.ax  record_and_match.input.ax
(+246 files in other folders)
