[workspace]
resolver = "2"
members = [
    "crates/llmbc",
    "crates/llmvm",
    "crates/llmc",
    "crates/llmfw",
    "crates/llm-effect",
    "crates/llmvm-cli",
    "orchestrator",
    "packages",
    "tooling",
    "crates/boruna-mcp",
]

[workspace.package]
version = "0.5.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
logos = "0.14"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
# Sprint W6-B: evidence bundle envelope encryption.
# `default-features = false` per ADR 001 (musl static link friendly).
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }

# Crate aliases: old directory names → new names for Boruna branding
# The directory structure stays the same; Cargo.toml names are updated.
# Rust source uses the new crate names via [dependencies] key aliasing.
