[workspace]
resolver = "2"
members = [
    "crates/llmbc",
    "crates/llmvm",
    "crates/llmc",
    "crates/llmfw",
    "crates/llm-effect",
    "crates/llmvm-cli",
    "orchestrator",
    "packages",
    "tooling",
    "crates/boruna-mcp",
    "crates/boruna-lsp",
    "benches",
]

[workspace.package]
version = "3.0.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
logos = "0.14"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
# Sprint W6-B: evidence bundle envelope encryption.
# `default-features = false` per ADR 001 (musl static link friendly).
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
# Optional ed25519 manifest signing for evidence bundles (verify-A
# "sign-side"). `default-features = false` per ADR 001 (musl static
# link friendly); we keep only `std` (error types) + `zeroize` (wipe
# secret key material). Signing is deterministic, so no RNG feature is
# needed.
ed25519-dalek = { version = "2", default-features = false, features = ["std", "zeroize"] }

# mTLS stack (sprint W6-A). `default-features = false` per ADR 001
# (drops the optional `prefer-post-quantum`, `logging` features).
# We do enable `aws_lc_rs` explicitly — it's the rustls 0.23 default
# crypto provider with stronger LTS guarantees than `ring`.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12"] }
# Dev-only cert generation for the mTLS integration test.
rcgen = "0.13"

# String-similarity for compiler typo suggestions (post1-T-1.5).
# Used by boruna-compiler's `suggest` module to surface
# Levenshtein-distance-1 keyword and identifier suggestions in
# parser/typeck error messages.
strsim = "0.11"

# Snapshot testing for compiler diagnostic fixtures (post1-T-1.5).
# Dev-dep only; never compiled into shipped artifacts.
insta = { version = "1", default-features = false }

# Filesystem watcher for `boruna run --watch` (post1-T-1.4).
# Default features are kept enabled here because they are the
# platform-specific watcher backends (fsevent on macOS, inotify on
# Linux, ReadDirectoryChanges on Windows) — the crate cannot
# function without one. ADR 001's default-features-off guideline is
# intentionally relaxed here for the same reason it is relaxed for
# `clap` (the `env` feature) and `criterion` (the
# `cargo_bench_support` feature).
notify = "6"

# Crate aliases: old directory names → new names for Boruna branding
# The directory structure stays the same; Cargo.toml names are updated.
# Rust source uses the new crate names via [dependencies] key aliasing.
