[package]
name = "boruna-orchestrator"
version.workspace = true
edition.workspace = true

[features]
default = ["persist-sqlite"]
http = ["boruna-vm/http"]
# SQLite-backed persistent workflow checkpoint store. See ADR 001 +
# docs/design-persistence-store.md. Off-by-default in downstream binaries
# that don't need persistence (boruna-mcp, boruna-pkg); on by default for
# the orchestrator itself.
persist-sqlite = ["dep:rusqlite"]

[[bin]]
name = "boruna-orch"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tempfile = "3"
# Sprint W6-B: evidence bundle envelope encryption (AES-256-GCM with
# DEK wrapped under operator-supplied KEK). See
# `docs/design-bundle-encryption.md` and ADR 001 for the
# default-features = false rationale.
aes-gcm = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
boruna-effect = { path = "../crates/llm-effect" }
boruna-compiler = { path = "../crates/llmc" }
boruna-vm = { path = "../crates/llmvm" }
boruna-bytecode = { path = "../crates/llmbc" }
# rusqlite with the `bundled` feature compiles SQLite from C source so the
# orchestrator binary stays statically linked (per ADR 001's musl
# requirement). Confirmed by the probe in the ADR sprint.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# post1-T-2.4: parallel KEK rotation across many bundles. Defaults
# to a work-stealing thread pool sized to num_cpus; the rotation
# CLI bounds it via `--parallelism N`. Default features pulled in
# (the crate has no system deps).
rayon = "1"

# macOS-only: libc for fcntl(F_FULLFSYNC). Plain `fsync(2)` on Darwin
# does NOT flush the drive's write cache to media — only F_FULLFSYNC
# gives true power-loss durability. SQLite makes the same choice. See
# the `fullsync_*` helpers in `data_flow.rs`.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
