[package]
name = "boruna-orchestrator"
version.workspace = true
edition.workspace = true

[features]
default = ["persist-sqlite"]
http = ["boruna-vm/http"]
# SQLite-backed persistent workflow checkpoint store. See ADR 001 +
# docs/design-persistence-store.md. Off-by-default in downstream binaries
# that don't need persistence (boruna-mcp, boruna-pkg); on by default for
# the orchestrator itself.
persist-sqlite = ["dep:rusqlite"]
# post1-T-3.1: S3 BundleStorage adapter. Pulls in object_store + a
# tokio current_thread runtime to bridge the sync trait against the
# async SDK. Off by default — only operators wiring
# `--bundle-storage s3://...` pay the dep tree cost. See
# docs/guides/bundle-storage-s3.md.
s3 = ["dep:object_store", "object_store/aws", "dep:tokio", "dep:futures"]
# post1-T-3.1: integration tests that spin up MinIO via
# testcontainers. Requires Docker on the test host. The test file
# self-skips with a clear message when Docker is absent so a missing
# daemon is never a CI failure mode for local devs.
s3-it = [
    "s3",
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "dep:tokio",
    "dep:reqwest",
]
# post1-T-3.2: GCS BundleStorage adapter. Same shape as `s3` —
# enables the `gcp` feature on object_store; reuses the optional
# tokio + futures deps. Off by default. See
# docs/guides/bundle-storage-gcs.md.
gcs = ["dep:object_store", "object_store/gcp", "dep:tokio", "dep:futures"]
# post1-T-3.2: integration tests that spin up fake-gcs-server via
# testcontainers (custom Image — testcontainers-modules has no GCS
# module). Self-skips on Docker absence, matching s3-it.
gcs-it = [
    "gcs",
    "dep:testcontainers",
    "dep:tokio",
    "dep:reqwest",
]
# post1-T-3.3: Azure Blob BundleStorage adapter. Same shape as
# `s3` and `gcs` — enables the `azure` feature on object_store.
# Off by default. See docs/guides/bundle-storage-azure.md.
azure = ["dep:object_store", "object_store/azure", "dep:tokio", "dep:futures"]
# post1-T-3.3: an Azurite-based integration test was deferred —
# Azurite requires SharedKey-signed container creation calls
# (object_store's Azure adapter doesn't expose a `create_container`
# operation), and pulling in the full `azure-storage` crate or
# implementing manual SharedKey signing for one test wasn't a
# proportionate cost. Coverage today: 18 unit tests for URI
# parsing, object-path concatenation, ref-to-run-id extraction,
# and error classification. Integration verification against real
# Azure is the operator follow-up. If we later decide to add an
# `azure-it` feature, follow the s3-it / gcs-it shape; the
# missing piece is just the bucket-create primitive.
# Docker-compose based integration tests for all three remote adapters
# (S3 via MinIO, GCS via fake-gcs-server, Azure via Azurite).
# Tests are #[ignore] and require pre-started Docker services from
# docker-compose.blob-tests.yml. Azurite is started with --loose so
# container creation does not require implementing SharedKey signing.
# Run: cargo test -p boruna-orchestrator --features blob-integration -- --ignored blob_
blob-integration = [
    "s3",
    "gcs",
    "azure",
    "dep:tokio",
    "dep:reqwest",
]

[[bin]]
name = "boruna-orch"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tempfile = "3"
# Sprint W6-B: evidence bundle envelope encryption (AES-256-GCM with
# DEK wrapped under operator-supplied KEK). See
# `docs/design-bundle-encryption.md` and ADR 001 for the
# default-features = false rationale.
aes-gcm = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
# F10: wipe DEK/KEK material from memory on drop so freed heap/stack
# pages don't retain key bytes. See encryption.rs `Envelope` Drop impl.
zeroize = "1"
boruna-effect = { path = "../crates/llm-effect" }
boruna-compiler = { path = "../crates/llmc" }
boruna-vm = { path = "../crates/llmvm" }
boruna-bytecode = { path = "../crates/llmbc" }
# rusqlite with the `bundled` feature compiles SQLite from C source so the
# orchestrator binary stays statically linked (per ADR 001's musl
# requirement). Confirmed by the probe in the ADR sprint.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# post1-T-2.4: parallel KEK rotation across many bundles. Defaults
# to a work-stealing thread pool sized to num_cpus; the rotation
# CLI bounds it via `--parallelism N`. Default features pulled in
# (the crate has no system deps).
rayon = "1"

# post1-T-3.1 / T-3.2: object_store backs the S3 (T-3.1) and GCS
# (T-3.2) BundleStorage adapters — and Azure Blob in T-3.3.
# `default-features = false` per ADR 001 (musl-friendly); the
# concrete provider features (`aws`, `gcp`, `azure`) are pulled in
# by the corresponding `s3` / `gcs` / `azure` feature flag, NOT
# unconditionally here, so a binary built with only `--features s3`
# doesn't pay for the GCS deps.
# `tokio` (workspace-pinned full feature set) is optional and
# shared across the adapters — each builds a current_thread
# runtime to bridge the sync trait against the async SDK.
# `futures` is needed to consume object_store's listing stream.
object_store = { version = "0.11", default-features = false, optional = true }
tokio = { workspace = true, optional = true }
futures = { version = "0.3", default-features = false, features = ["std"], optional = true }
testcontainers = { version = "0.23", features = ["blocking"], optional = true }
testcontainers-modules = { version = "0.11", features = ["minio"], optional = true }
# Test-only: hit the bucket-create endpoints (S3 PUT bucket / GCS
# POST /storage/v1/b) before object_store puts at them. Reqwest is
# already in the dep tree via object_store, so this adds nothing
# to the binary.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# macOS-only: libc for fcntl(F_FULLFSYNC). Plain `fsync(2)` on Darwin
# does NOT flush the drive's write cache to media — only F_FULLFSYNC
# gives true power-loss durability. SQLite makes the same choice. See
# the `fullsync_*` helpers in `data_flow.rs`.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
