[package]
name = "boruna-tooling"
version.workspace = true
edition.workspace = true

[dependencies]
boruna-compiler = { path = "../crates/llmc" }
boruna-bytecode = { path = "../crates/llmbc" }
boruna-vm = { path = "../crates/llmvm" }
boruna-framework = { path = "../crates/llmfw" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
