[package]
name = "boruna-tooling"
version.workspace = true
edition.workspace = true

[dependencies]
boruna-compiler = { path = "../crates/llmc" }
boruna-bytecode = { path = "../crates/llmbc" }
boruna-vm = { path = "../crates/llmvm" }
boruna-framework = { path = "../crates/llmfw" }
boruna-orchestrator = { path = "../orchestrator" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
