[package]
name = "boruna-tooling"
version.workspace = true
edition.workspace = true

[dependencies]
boruna-compiler = { path = "../crates/llmc" }
boruna-bytecode = { path = "../crates/llmbc" }
boruna-vm = { path = "../crates/llmvm" }
boruna-framework = { path = "../crates/llmfw" }
boruna-orchestrator = { path = "../orchestrator" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
# Per project-conventions §6: default-features = false on new external crates.
pulldown-cmark = { version = "0.10", default-features = false }

[dev-dependencies]
tempfile = "3"
