[package]
name = "boruna-effect"
description = "Boruna LLM integration — prompt building, context management, caching"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
boruna-bytecode = { path = "../llmbc" }

[dev-dependencies]
tempfile = "3"
