[package]
name = "boruna-cli"
description = "Boruna CLI tool"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boruna"
path = "src/main.rs"

[features]
default = ["persist-sqlite"]
serve = ["dep:axum", "dep:tokio", "dep:reqwest", "dep:uuid"]
http = ["boruna-vm/http"]
telemetry = ["boruna-vm/telemetry", "dep:tokio"]
# Forwards to boruna-orchestrator's persist-sqlite feature so the CLI's
# `workflow run` / `workflow resume` paths can use the SQLite checkpoint
# store. On by default (matching boruna-orchestrator). Build with
# `--no-default-features` to drop SQLite from the binary.
persist-sqlite = ["boruna-orchestrator/persist-sqlite"]

[dependencies]
boruna-bytecode = { path = "../llmbc" }
boruna-vm = { path = "../llmvm" }
boruna-compiler = { path = "../llmc" }
boruna-framework = { path = "../llmfw" }
boruna-tooling = { path = "../../tooling" }
boruna-orchestrator = { path = "../../orchestrator" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
# `reqwest` for the worker's HTTP client. `default-features = false`
# drops `openssl` so we don't pull a system dep; `rustls-tls` gives
# us TLS via a Rust impl, `json` is the body shape.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", optional = true, features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
