[package]
name = "boruna-cli"
description = "Boruna CLI tool"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boruna"
path = "src/main.rs"

[features]
default = ["persist-sqlite"]
serve = [
    "dep:axum",
    "dep:tokio",
    "dep:reqwest",
    "dep:uuid",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio-rustls",
    "dep:hyper",
    "dep:hyper-util",
    "dep:tower",
    "dep:tower-service",
]
http = ["boruna-vm/http"]
telemetry = ["boruna-vm/telemetry", "dep:tokio"]
# Forwards to boruna-orchestrator's persist-sqlite feature so the CLI's
# `workflow run` / `workflow resume` paths can use the SQLite checkpoint
# store. On by default (matching boruna-orchestrator). Build with
# `--no-default-features` to drop SQLite from the binary.
persist-sqlite = ["boruna-orchestrator/persist-sqlite"]
# post1-T-3.1: forwards to boruna-orchestrator's `s3` feature so
# `--bundle-storage s3://...` constructs a real adapter instead of
# rejecting at parse time. Off by default — pulls in object_store +
# tokio + reqwest. See docs/guides/bundle-storage-s3.md.
s3 = ["boruna-orchestrator/s3"]
# post1-T-3.2: forwards to boruna-orchestrator's `gcs` feature so
# `--bundle-storage gs://...` constructs a real adapter. Off by
# default. See docs/guides/bundle-storage-gcs.md.
gcs = ["boruna-orchestrator/gcs"]

[dependencies]
boruna-bytecode = { path = "../llmbc" }
boruna-vm = { path = "../llmvm" }
boruna-compiler = { path = "../llmc" }
boruna-framework = { path = "../llmfw" }
boruna-tooling = { path = "../../tooling" }
boruna-orchestrator = { path = "../../orchestrator" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
# `reqwest` for the worker's HTTP client. `default-features = false`
# drops `openssl` so we don't pull a system dep; `rustls-tls` gives
# us TLS via a Rust impl, `json` is the body shape.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", optional = true, features = ["v4"] }
sha2 = "0.10"
# mTLS stack (sprint W6-A). All optional; pulled in by `serve`.
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
# Direct hyper/hyper-util/tower deps for the mTLS connection
# loop (W6-A). These are already in the dep graph via axum so
# pulling them in directly does not increase the binary size.
hyper = { version = "1", optional = true, features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", optional = true, features = ["server-auto", "tokio"] }
tower = { version = "0.5", optional = true }
tower-service = { version = "0.3", optional = true }
# `boruna run --watch` (post1-T-1.4) — filesystem-watch loop that
# re-executes a `.ax` file on change.
notify = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
rcgen = { workspace = true }
# Dev-only: blocking reqwest for the mTLS integration test.
# The runtime worker uses async reqwest under tokio.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
# Dev-only: rustls + rustls-pemfile so tests can synthesize a
# bare TLS handshake (no client cert) and assert the server
# rejects it before any HTTP is exchanged.
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
