[package]
name = "boruna-cli"
description = "Boruna CLI tool"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boruna"
path = "src/main.rs"

[features]
default = ["persist-sqlite"]
http = ["boruna-vm/http"]
telemetry = ["boruna-vm/telemetry", "dep:tokio"]
# Forwards to boruna-orchestrator's persist-sqlite feature so the CLI's
# `workflow run` / `workflow resume` paths can use the SQLite checkpoint
# store. On by default (matching boruna-orchestrator). Build with
# `--no-default-features` to drop SQLite from the binary.
persist-sqlite = ["boruna-orchestrator/persist-sqlite"]
# post1-T-3.1: forwards to boruna-orchestrator's `s3` feature so
# `--bundle-storage s3://...` constructs a real adapter instead of
# rejecting at parse time. Off by default — pulls in object_store +
# tokio + reqwest. See docs/guides/bundle-storage-s3.md.
s3 = ["boruna-orchestrator/s3"]
# post1-T-3.2: forwards to boruna-orchestrator's `gcs` feature so
# `--bundle-storage gs://...` constructs a real adapter. Off by
# default. See docs/guides/bundle-storage-gcs.md.
gcs = ["boruna-orchestrator/gcs"]
# post1-T-3.3: forwards to boruna-orchestrator's `azure` feature so
# `--bundle-storage azblob://...` constructs a real adapter. Off
# by default. See docs/guides/bundle-storage-azure.md.
azure = ["boruna-orchestrator/azure"]
# Live transparency-log anchoring: forwards to boruna-orchestrator's
# `rekor` feature so `boruna evidence anchor` (without `--offline`) can
# POST to a Rekor instance. Off by default — the network client is only
# pulled in when this is set. Offline entry-building + inclusion-proof
# verification work without it. See docs/... and audit/anchor.rs.
rekor = ["boruna-orchestrator/rekor"]

[dependencies]
boruna-bytecode = { path = "../llmbc" }
boruna-vm = { path = "../llmvm" }
boruna-compiler = { path = "../llmc" }
boruna-framework = { path = "../llmfw" }
boruna-tooling = { path = "../../tooling" }
boruna-orchestrator = { path = "../../orchestrator" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
# `tokio` is required by the `telemetry` feature (OTel batch exporter
# runtime). Optional so non-telemetry builds don't pull it in.
tokio = { workspace = true, optional = true }
sha2 = "0.10"
# `boruna run --watch` (post1-T-1.4) — filesystem-watch loop that
# re-executes a `.ax` file on change.
notify = { workspace = true }
