[package]
name = "boruna-vm"
description = "Boruna virtual machine and runtime"
version.workspace = true
edition.workspace = true

[features]
default = []
http = ["dep:ureq", "dep:url"]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
    "dep:tokio",
]

[dependencies]
boruna-bytecode = { path = "../llmbc" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "2", optional = true }
url = { version = "2", optional = true }
# Tracing facade — always on. Without a subscriber, span macros expand to
# essentially no-ops (single atomic check). The `telemetry` feature adds
# the OTel SDK + subscriber that actually consumes the spans.
tracing = "0.1"
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", optional = true, default-features = false, features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = { version = "0.28", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = "0.3"
